crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/all_fields_mocked/mockql_core__graphql__mock_directive_extractor__tests__mock_directive_extraction@all_fields_mocked__multiple_top_level_fields.graphql.snap
---
source: crates/mockql-core/src/graphql/mock_directive_extractor.rs
expression: "match MOCK_DIRECTIVE_EXTRACTOR.extract(&content, operation_name.as_deref())\n{\n    Ok(scenario) => serde_json::to_string_pretty(&scenario).unwrap(),\n    Err(error) => format!(\"{error:?}\"),\n}"
input_file: crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/all_fields_mocked/multiple_top_level_fields.graphql
---
{
  "type": "AllTopLevelFieldsMocked",
  "data": {
    "document": "{ me @mock(hint: \"current user\") { id name } topProducts(first: 5) @mock(hint: \"popular products\") { name upc } }",
    "mocked_fields": [
      {
        "path": "me",
        "hint": "current user",
        "return_type": "User"
      },
      {
        "path": "topProducts",
        "hint": "popular products",
        "return_type": "Product"
      }
    ]
  }
}
